fix: scrollbar not visible

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1042,7 +1042,7 @@ blockquote {
 
         &-thumb {
             background: $paleblue;
-            border: 13px solid transparent;
+            border: 9px solid transparent;
             background-clip: content-box !important;
 
             &:hover {
